Add rudimentary support to install Renameuser with composer.
Adding name, type, and autoloader were enough to make it work. It
might be a good idea to add description, licence, etc as well.

Basic documentation on the topic:
* https://www.mediawiki.org/wiki/Composer/For_extensions
* http://www.bn2vs.com/blog/2013/11/24/introduction-to-composer-for-mediawiki-developers/
* https://getcomposer.org/doc/02-libraries.md

The final goal of this change is to publish Renameuser on
packagist.org so that it found by composer automatically.

Change-Id: Id19ec55183459bbf17ef44ad084a3305b406cc03

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+	"name": "mediawiki/renameuser",
+	"type": "mediawiki-extension",
+	"autoload": {
+		"files": ["Renameuser.php"]
+	},
+	"require": {
+		"composer/installers": ">1.0.12"
+	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9",
 		"mediawiki/mediawiki-codesniffer": "0.5.0"
