--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+	"name": "mediawiki/renameuser",
+	"type": "mediawiki-extension",
+	"autoload": {
+		"files": ["Renameuser.php"]
+	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9",
 		"mediawiki/mediawiki-codesniffer": "0.5.0"
