Expand .gitignore for more editors
List is from mediawiki/core

Change-Id: Ic494c185b6f80ebd72cdf56118337d1bbf67e74c

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-*~
-*.kate-swp
-.*.swp
 node_modules/
 /composer.lock
 /vendor/
+
+# Editors
+*.kate-swp
+*~
+\#*#
+.#*
+.*.swp
+.project
+.buildpath
+.classpath
+.settings
+cscope.files
+cscope.out
+*.orig
+## NetBeans
+nbproject*
+project.index
+## Sublime
+sublime-*
+sftp-config.json
