--- a/project.config
+++ b/project.config
@@ -10,3 +10,5 @@
 	description = MediaWiki extension Renameuser.
 [allowSuperproject "mediawiki/extensions"]
 	matching = refs/heads/REL1_27:refs/heads/REL1_27
+[allowSuperproject "mediawiki/core"]
+	matching = refs/heads/wmf/1.28.0-wmf.16:refs/heads/sandbox/twentyafterfour/group0
