Added superproject subscription during upgrade

--- a/project.config
+++ b/project.config
@@ -8,4 +8,5 @@
 	mergeContent = true
 [project]
 	description = MediaWiki extension Renameuser.
-	state = active
+[allowSuperproject "mediawiki/extensions"]
+	matching = refs/heads/master:refs/heads/master
